style: fix gap and height

--- a/src/components/_templates/Graph/Graph.styles.css
+++ b/src/components/_templates/Graph/Graph.styles.css
@@ -5,6 +5,9 @@
   height: 100vh;
   min-height: 910px;
 
+  padding-top: 80px;
+  box-sizing: border-box;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
