--- a/src/components/_templates/Main/Main.styles.css
+++ b/src/components/_templates/Main/Main.styles.css
@@ -9,7 +9,6 @@
   align-items: flex-start;
   align-content: flex-start;
   flex-wrap: wrap;
-  gap: 30px;
 
   animation-name: section-appearing;
   animation-duration: 0.2s;
@@ -19,6 +18,7 @@
   flex-basis: 200px;
   height: 200px;
   border: 0;
+  margin: 15px;
 
   background-color: coral;
   border-radius: 5px;
